--- a/src/com/demo/db.properties
+++ b/src/com/demo/db.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/db_ea?useUnicode=true&characterEncoding=utf8
+url=jdbc:mysql://118.31.59.108:3306/edusql?useUnicode=true&characterEncoding=utf8
 user=root
 password=root
 initCount=10
